Added alert records views, listings, etc.
ADD: Alert record view
Added show_record action and view on AlertsController to show available
information about an AlertRecord.

ADD: AlertRecord listings
Added AlertRecord panel on Service results page and Service on Host
results page.
Also, added AlertRecord listing based on a Host (no Service filtering)
to show the list of Alert Records on a determined Host.

MODIFY: Modified bootstrap md-size
Changed from 992px to 1030px.

MODIFY: Index page
Added panel with AlertRecords resume.

MODIFY: Javascript results update
Changed to include AlertRecord changes.

--- a/app/assets/stylesheets/ui/results.sass
+++ b/app/assets/stylesheets/ui/results.sass
@@ -7,3 +7,9 @@
         td:first-child
           a
             :text-decoration none !important
+
+.alerts-info-panel
+  table
+    tbody
+      tr
+        :cursor pointer
