--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("panel.index.title") %>
 <div class='row-fluid'>
-  <div class='content-index col-md-8'>
+  <div class='content'>
     <div class="page-header">
       <h1>
         <%= t("panel.index.title") %>
@@ -9,6 +9,8 @@
         </small>
       </h1>
     </div>
+  </div>
+  <div class='content-index col-md-8'>
     <%= bootstrap_flash %>
     <div class='results-panel fluid-columns'>
       <div class="row">
@@ -83,13 +85,66 @@
           <b>Alerts report</b>
         </div>
         <div class='pull-right'>
-          <span class='badge'><strong class='text-success'>0 ACTIVED</strong></span>
-        </div>
-      </div>
+      <span class='badge'>
+        <% num_alerts_opened = @alert_records.limit(0).where(:opened => true).count
 
-      <div class="no-results">
-        <%= raw t("ui.table.no_element") %>
+        if (num_alerts_opened == 1)
+          badge_text = num_alerts_opened.to_s + " " + t("services.results.alerts_history.opened.singular")
+        else
+          badge_text = num_alerts_opened.to_s + " " + t("services.results.alerts_history.opened.plural")
+        end
+
+        if (num_alerts_opened == 0) %>
+        <strong class='text-success'><%= badge_text.upcase %></strong>
+        <% else %>
+        <strong class='text-danger'><%= badge_text.upcase %></strong>
+        <% end %>
+      </span>
+    </div>
       </div>
+      <table class="table table-hover table-elements">
+        <thead>
+          <tr>
+            <th class="col-xs-2 text-center"><%= t("alerts.index_records.table.status") %></th>
+            <th class="col-xs-6 col-sm-7 col-lg-8"><%= t("alerts.index_records.table.description") %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @alert_records.each do |alert_record| %>
+          <tr onclick="location.href='<%= alert_record_path(alert_record) %>'">
+            <td class="text-center">
+              <strong class="<% if (alert_record.opened) %>text-danger<% else %>text-success<% end %>">
+                <% if (alert_record.opened) %>
+                <%= t("alerts.record_status.opened").upcase %>
+                <% else %>
+                <%= t("alerts.record_status.closed").upcase %>
+                <% end %>
+              </strong>
+            </td>
+            <td>
+              <% if (alert_record.opened) %><strong class='text-danger'><% end %>
+              <% if (!alert_record.service.blank?) %>
+                <% if (alert_record.host_ids.count == 1) %>
+                  <%= raw t("alerts.record_description.host", :alert => alert_record.alert.name, :host => alert_record.hosts.first.name) %>
+                <% else %>
+                  <%= raw t("alerts.record_description.all", :alert => alert_record.alert.name) %>
+                <% end %>
+              <% else %>
+              <span class="text-danger"><%= t("alerts.table.no_data") %></span>
+              <% end %>
+              <% if (alert_record.opened) %></strong><% end %>
+            </td>       
+          </tr>
+          <% end %>
+          <% if (@alert_records.count == 0) %>
+            <tr class="no-elements">
+              <td colspan="2">
+                <%= raw t("ui.table.no_element") %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
