--- a/app/views/services/host_results.js.erb
+++ b/app/views/services/host_results.js.erb
@@ -1,3 +1,4 @@
 $("#host-history").html("<%= escape_javascript(render(:partial => 'services/panels/host_history'))%>");
 $("#host-info").html("<%= escape_javascript(render(:partial => 'services/panels/host_info'))%>");
 $("#service-info").html("<%= escape_javascript(render(:partial => 'services/panels/service_info'))%>");
+$("#alerts-info").html("<%= escape_javascript(render(:partial => 'services/panels/alerts_info'))%>");
