--- a/app/views/services/host_results.html.erb
+++ b/app/views/services/host_results.html.erb
@@ -22,13 +22,8 @@
       <div id='chart-container' class='chart-container'></div>
     </div>
 
-    <div id='alerts-panel' class="panel panel-primary alerts-panel">
-      <div class="panel-heading">
-        <b><%= t("services.host_results.alerts_history", :service => @service.name, :host => @host.name) %></b>
-      </div>
-      <div class='panel-body'>
-        No data yet.
-      </div>
+    <div id ="alerts-info">
+      <%= render(:partial => "services/panels/alerts_info") %>
     </div>
   </div>
 
