--- a/app/views/services/panels/_host_history.html.erb
+++ b/app/views/services/panels/_host_history.html.erb
@@ -3,7 +3,7 @@
   @results_orig = Result.where(:service_id => @service.id).in("host_results.host_id" => @host.id).desc(:created_at).limit(4).to_a
   @hresults = @results_orig.map{|u| u = u.host_results.select{|hr| hr.host_id == @host.id}.first}
 %>
-<div id="host-results-panel" class="panel panel-primary host-results-panel">
+<div id="host-history-panel" class="panel panel-primary host-history-panel">
   <div class="panel-heading clearfix">
     <div class="pull-left">
       <b><%= t("services.host_results.host_history.title") %></b>
