--- a/app/assets/stylesheets/bootstrap-cosmo/variables.scss
+++ b/app/assets/stylesheets/bootstrap-cosmo/variables.scss
@@ -278,7 +278,7 @@ $screen-tablet:              $screen-sm-min;
 // Medium screen / desktop
 //** Deprecated `$screen-md` as of v3.0.1
 $screen-md:                  992px;
-$screen-md:                  1030px;
+//$screen-md:                  1030px;
 $screen-md-min:              $screen-md;
 //** Deprecated `$screen-desktop` as of v3.0.1
 $screen-desktop:             $screen-md-min;
