--- a/app/assets/stylesheets/ui/sidebar.sass
+++ b/app/assets/stylesheets/ui/sidebar.sass
@@ -28,8 +28,9 @@ div.content
       margin-top: 0px
 
 div.content-index
-  @extend .col-md-8
-
+  margin-left: -15px
+  margin-right: -15px
+  
   div.page-header
     margin-top: 0px
 
