Added button to show results from homepage.

--- a/app/assets/stylesheets/ui/results.sass
+++ b/app/assets/stylesheets/ui/results.sass
@@ -8,6 +8,12 @@
           a
             :text-decoration none !important
 
+.results-panel-index
+  .panel-heading
+    .btn
+      :margin-top -3px
+      :margin-bottom -2px
+
 .alerts-info-panel
   table
     tbody
