--- a/app/views/panel/panels/_alerts_info.html.erb
+++ b/app/views/panel/panels/_alerts_info.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div id="alerts-info-panel" class="alerts-info-panel panel panel-primary">
   <div class="panel-heading clearfix">
     <div class="pull-left">
       <b><%= t("panel.index.alerts_panel.title") %></b>
