Using HighStock, improves in JSON generation and in UX
MODIFY: Use of HighStock
Changed from HighCharts to HighStock in order to avoid problems with
large number of points.

MODIFY: Improve JSON generation
Removed latest changes to improve JSON generation

MODIFY: Number of points in charts
Changed some charts to make a faster loading.

MODIFY: Limit of points to return in JSON generation
Parameter :limit in URL of JSON API limits the number of points to
return in the JSON, so it can be created quickly.

--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -56,7 +56,8 @@
         subtitle: "<%= t('services.results.chart.subtitle', :interval => service_chart.interval) %>",
         x_axis: "<%= t('services.results.chart.x_axis') %>",
         y_axis: "<%= t('services.results.chart.y_axis') %> [<%= service_chart.get_units_short %>]",
-        legend: "<%= t('services.results.chart.legend', :service => service_chart.name) %>"
+        legend: "<%= t('services.results.chart.legend', :service => service_chart.name) %>",
+        loading: "<%= t('services.results.chart.loading') %>"
       },
       data_url: "<%= results_data_service_path(service_chart.id) %>",
       resume: "<%= service_chart.resume %>"
