--- a/app/views/services/results.html.erb
+++ b/app/views/services/results.html.erb
@@ -61,13 +61,14 @@
       container: $("#chart-container"),
       live: true,
       interval: <%= @service.interval %>,
-      clean_interval: <%= @service.clean_interval %>,
+      points_limit: <%= (@service.clean_interval/@service.interval).ceil %>,
       texts: {
         title: "<%= t('services.results.chart.title', :service => @service.name) %>",
         subtitle: "<%= t('services.results.chart.subtitle', :interval => @service.interval) %>",
         x_axis: "<%= t('services.results.chart.x_axis') %>",
         y_axis: "<%= t('services.results.chart.y_axis') %> [<%= @service.get_units_short %>]",
-        legend: "<%= t('services.results.chart.legend', :service => @service.name) %>"
+        legend: "<%= t('services.results.chart.legend', :service => @service.name) %>",
+        loading: "<%= t('services.results.chart.loading' %>"
       },
       data_url: "<%= results_data_service_path(@service.id) %>",
       resume: "<%= @service.resume %>"
@@ -88,13 +89,14 @@
       container: $("#chart-container"),
       live: true,
       interval: <%= @service.interval %>,
-      clean_interval: <%= @service.clean_interval %>,
+      points_limit: <%= (@service.clean_interval/@service.interval).ceil %>,
       texts: {
         title: "<%= t('services.results.chart.title', :service => @service.name) %>",
         subtitle: "<%= t('services.results.chart.subtitle', :interval => @service.interval) %>",
         x_axis: "<%= t('services.results.chart.x_axis') %>",
         y_axis: "<%= t('services.results.chart.y_axis') %> [<%= @service.get_units_short %>]",
-        legend: "<%= t('services.results.chart.legend', :service => @service.name) %>"
+        legend: "<%= t('services.results.chart.legend', :service => @service.name) %>",
+        loading: "<%= t('services.results.chart.loading') %>"
       },
       data_url: "<%= results_data_service_path(@service.id) %>",
       resume: resume
