--- a/app/views/hosts/results.html.erb
+++ b/app/views/hosts/results.html.erb
@@ -46,19 +46,24 @@
 </div>
 <script>
   $(document).ready(function() {
-    <% @host.services.each do |serv| %>
+    <% @host.services.each do |serv| 
+      points_limit = (serv.clean_interval/serv.interval).ceil
+      points_limit = (3600/serv.interval).ceil if (points_limit > (3600/serv.interval).ceil)
+      %>
     chartStart({
       container: $("#service-panel-<%= serv.id.to_s %> #chart-container"),
       height: 300,
       live: true,
+      zoomable: false,
       interval: <%= serv.interval %>,
-      clean_interval: <%= serv.clean_interval %>,
+      points_limit: <%= points_limit %>,
       texts: {
         title: "<%= t('hosts.results.chart.title', :service => serv.name, :host => @host.name) %>",
         subtitle: "<%= t('hosts.results.chart.subtitle', :interval => serv.interval) %>",
         x_axis: "<%= t('hosts.results.chart.x_axis') %>",
         y_axis: "<%= t('services.resumes.'+ serv.resume.to_s) %> [<%= serv.get_units_short %>]",
-        legend: "<%= t('hosts.results.chart.legend', :service => serv.name) %>"
+        legend: "<%= t('hosts.results.chart.legend', :service => serv.name) %>",
+        loading: "<%= t('hosts.results.chart.loading') %>"
       },
       data_url: "<%= host_results_data_service_path(:id => serv.id, :host_id => @host.id) %>",
       resume: "<%= serv.resume %>"
