--- a/app/views/services/host_results.html.erb
+++ b/app/views/services/host_results.html.erb
@@ -46,13 +46,14 @@
       container: $("#chart-container"),
       live: true,
       interval: <%= @service.interval %>,
-      clean_interval: <%= @service.clean_interval %>,
+      points_limit: <%= (@service.clean_interval/@service.interval).ceil %>,
       texts: {
         title: "<%= t('services.host_results.chart.title', :service => @service.name, :host => @host.name) %>",
         subtitle: "<%= t('services.host_results.chart.subtitle', :interval => @service.interval) %>",
         x_axis: "<%= t('services.host_results.chart.x_axis') %>",
         y_axis: "<%= t('services.host_results.chart.y_axis') %> [<%= @service.get_units_short %>]",
-        legend: "<%= t('services.host_results.chart.legend', :service => @service.name) %>"
+        legend: "<%= t('services.host_results.chart.legend', :service => @service.name) %>",
+        loading: "<%= t('services.host_results.chart.loading') %>"
       },
       data_url: "<%= host_results_data_service_path(:id => @service.id, :host_id => @host.id) %>"
     });
