--- a/app/views/hosts/alert_records.html.erb
+++ b/app/views/hosts/alert_records.html.erb
@@ -51,7 +51,7 @@
               <% if (alert_record.host_ids.count == 1) %>
                 <%= raw t("alerts.record_description.host", :alert => alert_record.alert.name, :host => alert_record.hosts.first.name) %>
               <% else %>
-                <%= raw t("alerts.record_description.all", :alert => alert_record.alert.name) %>
+                <%= raw t("alerts.record_description.hosts", :alert => alert_record.alert.name) %>
               <% end %>
             <% else %>
             <span class="text-danger"><%= t("hosts.alert_records.table.no_data") %></span>
