--- a/app/views/services/panels/_alerts_info.html.erb
+++ b/app/views/services/panels/_alerts_info.html.erb
@@ -52,7 +52,7 @@
             <% if (alert_record.host_ids.count == 1) %>
               <%= raw t("alerts.record_description.host", :alert => alert_record.alert.name, :host => alert_record.hosts.first.name) %>
             <% else %>
-              <%= raw t("alerts.record_description.all", :alert => alert_record.alert.name) %>
+              <%= raw t("alerts.record_description.hosts", :alert => alert_record.alert.name) %>
             <% end %>
           <% else %>
           <span class="text-danger"><%= t("alerts.table.no_data") %></span>
